@@ -27,9 +27,8 @@ public class ListExclusionRuleTest {
     final String[] closeEnoughs = new String[] {"ORDDAT", "SYSTEM", "APEX_12345", "FLOWS_1234567"};
     for (final String closeEnough : closeEnoughs) {
       assertThat(
-          String.format(
-              "<%s> - exclude close enough strings - inclusion rule should evaluate to true",
-              closeEnough),
+          "<%s> - exclude close enough strings - inclusion rule should evaluate to true"
+              .formatted(closeEnough),
           exclusionRule.test(closeEnough),
           is(true));
     }
@@ -41,7 +40,7 @@ public class ListExclusionRuleTest {
     final String[] empties = new String[] {null, "", "\t", "  "};
     for (final String empty : empties) {
       assertThat(
-          String.format("<%s> - exclude empties - inclusion rule should evaluate to false", empty),
+          "<%s> - exclude empties - inclusion rule should evaluate to false".formatted(empty),
           exclusionRule.test(empty),
           is(false));
     }
@@ -53,8 +52,7 @@ public class ListExclusionRuleTest {
     final String[] valids = new String[] {"ORDDATA", "\"SYSTEM\"", "APEX_123456", "FLOWS_12345"};
     for (final String valid : valids) {
       assertThat(
-          String.format(
-              "<%s> - include valid schemas - inclusion rule should evaluate to false", valid),
+          "<%s> - include valid schemas - inclusion rule should evaluate to false".formatted(valid),
           exclusionRule.test(valid),
           is(false));
     }
