@@ -13,10 +13,8 @@ import static schemacrawler.test.utility.ExecutableTestUtility.executableExecuti
 import static schemacrawler.test.utility.FileHasContent.classpathResource;
 import static schemacrawler.test.utility.FileHasContent.hasSameContentAs;
 import static schemacrawler.test.utility.FileHasContent.outputOf;
-import static schemacrawler.test.utility.TestUtility.javaVersion;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.util.Properties;
@@ -45,7 +43,7 @@ public class CalciteTest extends BaseAdditionalDatabaseTest {
   public void createDatabase() throws Exception {
     // Read model
     final Path directoryPath =
-        Paths.get("src/test/resources/calcite-model", "STOCKMARKET.json").toAbsolutePath();
+        Path.of("src/test/resources/calcite-model", "STOCKMARKET.json").toAbsolutePath();
 
     // Create connection
     final Properties info = new Properties();
@@ -88,8 +86,7 @@ public class CalciteTest extends BaseAdditionalDatabaseTest {
     executable.setSchemaCrawlerOptions(schemaCrawlerOptions);
     executable.setAdditionalConfiguration(SchemaTextOptionsBuilder.builder(textOptions).toConfig());
 
-    final String expectedResource =
-        String.format("testCalciteWithConnection.%s.txt", javaVersion());
+    final String expectedResource = "testCalciteWithConnection.txt";
     assertThat(
         outputOf(executableExecution(dataSource, executable)),
         hasSameContentAs(classpathResource(expectedResource)));
