@@ -6,12 +6,12 @@
  * SPDX-License-Identifier: EPL-2.0
  */
 
-
 package schemacrawler.tools.offline.jdbc;
 
 import static schemacrawler.tools.offline.jdbc.OfflineConnectionUtility.newOfflineDatabaseConnectionSource;
 import static us.fatehi.utility.Utility.isBlank;
-import java.nio.file.Paths;
+
+import java.nio.file.Path;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.DriverManager;
@@ -46,7 +46,7 @@ public class OfflineDriver implements Driver {
   public Connection connect(final String url, final Properties info) throws SQLException {
     if (acceptsURL(url)) {
       final String path = url.substring(JDBC_URL_PREFIX.length());
-      return newOfflineDatabaseConnectionSource(Paths.get(path)).get();
+      return newOfflineDatabaseConnectionSource(Path.of(path)).get();
     } else {
       return null;
     }
