@@ -19,7 +19,6 @@ import static us.fatehi.utility.IOUtility.readFully;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import us.fatehi.utility.ioresource.FileInputResource;
 
@@ -27,7 +26,7 @@ public class FileInputResourceTest {
 
   @Test
   public void badArgs() {
-    assertThrows(IOException.class, () -> new FileInputResource(Paths.get("no_resource")));
+    assertThrows(IOException.class, () -> new FileInputResource(Path.of("no_resource")));
   }
 
   @Test
